--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Document</title>
+		<title>鲶大禹的笔记本</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="description" content="Description" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css" />
 	</head>
 	<body>
-		<div id="app"></div>
+		<div id="app">大智正在飞快前往笔记……</div>
 		<script>
 			window.$docsify = {
-				name: "",
-				repo: "",
+				loadSidebar: true,
 			}
 		</script>
 		<!-- Docsify v4 -->
