--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-cn">
 	<head>
 		<meta charset="UTF-8" />
 		<title>鲶大禹的笔记本</title>
@@ -9,13 +9,26 @@
 		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css" />
 	</head>
 	<body>
-		<div id="app">大智正在飞快前往笔记……</div>
+		<div id="app">鲶大禹正在飞快翻找……</div>
 		<script>
 			window.$docsify = {
 				loadSidebar: true,
+				name: "Im鲶大禹",
+				coverpage: true,
+				subMaxLevel: 2,
+
+				search: {
+					maxAge: 86400000, // 过期时间，单位毫秒，默认一天
+					placeholder: "搜索……",
+					noData: "找不到结果！",
+					// 搜索标题的最大层级, 1 - 6
+					depth: 4,
+					hideOtherSidebarContent: false, // 是否隐藏其他侧边栏内容
+				},
 			}
 		</script>
 		<!-- Docsify v4 -->
 		<script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+		<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 	</body>
 </html>
