--- a/index.html
+++ b/index.html
@@ -30,11 +30,24 @@
 					depth: 4,
 					hideOtherSidebarContent: false, // 是否隐藏其他侧边栏内容
 				},
+
+				copyCode: {
+					buttonText: "复制",
+					errorText: "失败！",
+					successText: "成功！",
+				},
 			}
 		</script>
 		<!-- Docsify v4 -->
 		<script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+		<!-- 搜索框 -->
 		<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+		<!-- 图片缩放 -->
 		<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+		<!-- 代码块复制 -->
+		<script src="https://unpkg.com/docsify-copy-code"></script>
+		<!-- 代码高亮 -->
+		<script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-php.min.js"></script>
 	</body>
 </html>
