--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="description" content="Description" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css" />
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+		<meta http-equiv="Pragma" content="no-cache" />
+		<meta http-equiv="Expires" content="0" />		
+		<link rel="stylesheet" href="./css/vue.css" />
+		<style>
+			.markdown-section pre>code {
+				padding: 1.2em 5px;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="app">鲶大禹正在飞快翻找……</div>
@@ -16,7 +24,7 @@
 				loadSidebar: true,
 				name: "Im鲶大禹",
 				coverpage: true,
-				subMaxLevel: 2,
+				subMaxLevel: 3,
 
 				alias: {
 					"/.*/_sidebar.md": "/_sidebar.md", // 如果有多个子目录，确保都指向主侧边栏
@@ -38,33 +46,33 @@
 				},
 
 				// 页脚
-				plugins: [
-					function (hook) {
-						var footer = [
-							"<hr/>",
-							"<footer>",
-							'<span><a href="https://github.com/NDYian">鲶大禹</a> &copy;2024 </span>',
-							'<span>本文档借助 <a href="https://github.com/docsifyjs/docsify" target="_blank">docsify</a> 编写</span>',
-							"</footer>",
-						].join("")
+				// plugins: [
+				// 	function (hook) {
+				// 		var footer = [
+				// 			"<hr/>",
+				// 			"<footer>",
+				// 			'<span><a href="https://gitee.com/NDYian/NDYian">鲶大禹</a> &copy;2024 </span>',
+				// 			'<span>本文档借助 <a href="https://github.com/docsifyjs/docsify" target="_blank">docsify</a> 编写</span>',
+				// 			"</footer>",
+				// 		].join("")
 
-						hook.afterEach(function (html) {
-							return html + footer
-						})
-					},
-				],
+				// 		hook.afterEach(function (html) {
+				// 			return html + footer
+				// 		})
+				// 	},
+				// ],
 			}
 		</script>
 		<!-- Docsify v4 -->
-		<script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+		<script src="./css/docsify.min.js"></script>
 		<!-- 搜索框 -->
-		<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+		<script src="./css/search.min.js"></script>
 		<!-- 图片缩放 -->
-		<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+		<script src="./css/zoom-image.min.js"></script>
 		<!-- 代码块复制 -->
-		<script src="https://unpkg.com/docsify-copy-code"></script>
+		<script src="./css/docsify-copy-code.min.js"></script>
 		<!-- 代码高亮 -->
-		<script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
-		<script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-php.min.js"></script>
+		<script src="./css/prism-bash.min.js"></script>
+		<script src="./css/prism-php.min.js"></script>
 	</body>
 </html>
